Fix listen now button resizing on mobile

--- a/styles/Button.module.css
+++ b/styles/Button.module.css
@@ -22,7 +22,7 @@
 .btn {
     width: 100%;
     text-align: center;
-    height: 60px;
+    height: 100%;
     border: none;
     border-radius: 20px;
     background-image: linear-gradient(45deg, #ff7300 5%, #f08335 70%);
